--- a/evaluation_metrics.ipynb
+++ b/evaluation_metrics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxgSURIK85ZFyHb15xHasc",
+      "authorship_tag": "ABX9TyPgBZ+rWCnWQ9Q+ZeR8DDht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 1,
       "metadata": {
         "id": "MOUqhP_DYydO"
       },
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "r5k2YIN6t6fs"
       },
-      "execution_count": 73,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "vSpplYHzvKz2"
       },
-      "execution_count": 74,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "SopvaHTovnm9"
       },
-      "execution_count": 75,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "n930NFHHx7zI"
       },
-      "execution_count": 76,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "1PJn0MWYWS58"
       },
-      "execution_count": 77,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "GL53uEwYWxLD"
       },
-      "execution_count": 78,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -195,9 +195,9 @@
           "height": 465
         },
         "id": "WDpAUg_hXbbH",
-        "outputId": "957209c6-7cba-4a88-95ff-27a41070bf21"
+        "outputId": "d672d3a5-6025-44b2-f6f4-f5eda44692c7"
       },
-      "execution_count": 79,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +207,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "1tAnm4E1fz6u"
       },
-      "execution_count": 80,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "RBRQ4fcNhtOE"
       },
-      "execution_count": 81,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -282,7 +282,7 @@
       "metadata": {
         "id": "iFBuKbeviDRk"
       },
-      "execution_count": 82,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -318,7 +318,7 @@
       "metadata": {
         "id": "ira21eHSkVa1"
       },
-      "execution_count": 83,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -341,9 +341,9 @@
           "height": 469
         },
         "id": "JEwJGfi6lcSt",
-        "outputId": "f929b927-6189-4130-b644-fd137372164c"
+        "outputId": "e57a41c9-169e-4292-d3df-350fd290fd49"
       },
-      "execution_count": 84,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +353,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 13
         },
         {
           "output_type": "display_data",
@@ -394,9 +394,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_4QYOtFimMl4",
-        "outputId": "c3e0e7d8-1971-451b-9112-ff9fafa46ac7"
+        "outputId": "1d100bf4-3533-47d0-e887-9025c002d301"
       },
-      "execution_count": 85,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +406,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 14
         }
       ]
     },
@@ -440,7 +440,7 @@
       "metadata": {
         "id": "X6XfxiavLpph"
       },
-      "execution_count": 86,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
       "metadata": {
         "id": "z07n1ZqGwWkm"
       },
-      "execution_count": 87,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -499,7 +499,7 @@
       "metadata": {
         "id": "edo_Is85zCRX"
       },
-      "execution_count": 88,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -529,7 +529,41 @@
       "metadata": {
         "id": "xIiKxIMx0qLU"
       },
-      "execution_count": 89,
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "import numpy as np\n",
+        "\n",
+        "def weighted_f1(y_true, y_pred):\n",
+        "  num_classes = len(np.unique(y_true))\n",
+        "  class_counts = Counter(y_true)  # {0:20, 1:15, 2:21}\n",
+        "  f1 = 0\n",
+        "  for class_ in range(num_classes):\n",
+        "    temp_true = [1 if p == class_ else 0 for p in y_true]\n",
+        "    temp_pred = [1 if p == class_ else 0 for p in y_pred]\n",
+        "\n",
+        "    p = precision(temp_true, temp_pred)\n",
+        "    r = recall(temp_true, temp_pred)\n",
+        "\n",
+        "    if p + r != 0:\n",
+        "      temp_f1 = 2 * p * r / (p + r)\n",
+        "    else:\n",
+        "      temp_f1 = 0\n",
+        "    \n",
+        "    weighted_f1 = class_counts[class_] * temp_f1\n",
+        "    f1 += weighted_f1\n",
+        "  \n",
+        "  overall_f1 = f1 / len(y_true)\n",
+        "  return overall_f1"
+      ],
+      "metadata": {
+        "id": "4jPSfBU6BXCz"
+      },
+      "execution_count": 19,
       "outputs": []
     }
   ]
