--- a/evaluation_metrics.ipynb
+++ b/evaluation_metrics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsrsaC1zXOtP/KAaXiNT8d",
+      "authorship_tag": "ABX9TyP+/1jfQXL4pPKEYakVxU3U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -603,7 +603,7 @@
           "height": 653
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "EjPLJQeufLEb"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -674,7 +674,36 @@
       "metadata": {
         "id": "swEywKxrlhjk"
       },
-      "execution_count": 3,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# another version of apk, which the order of prediction matters\n",
+        "def apk(actual, predicted, k=10):\n",
+        "  if len(predicted) > k:\n",
+        "    predicted = predicted[:k]\n",
+        "\n",
+        "  score = 0.0\n",
+        "  num_hits = 0.0\n",
+        "\n",
+        "  for i, p in enumerate(predicted):\n",
+        "    print(\"i \", i, \"p \", p)\n",
+        "    if p in actual and p not in predicted[:i]:\n",
+        "      print(predicted[:i])\n",
+        "      num_hits += 1.0\n",
+        "      score += (num_hits / i+1.0)\n",
+        "\n",
+        "  if not actual:\n",
+        "    return 0.0\n",
+        "    \n",
+        "  return score / min(len(actual), k)"
+      ],
+      "metadata": {
+        "id": "YtRSoCd1mrHt"
+      },
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -690,7 +719,7 @@
       "metadata": {
         "id": "gV-UtTA-p7aV"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     }
   ]
