add regression metrics

--- a/evaluation_metrics.ipynb
+++ b/evaluation_metrics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+/1jfQXL4pPKEYakVxU3U",
+      "authorship_tag": "ABX9TyOnIxoC+jJ61G7fZLXfvBwI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -718,6 +718,81 @@
       ],
       "metadata": {
         "id": "gV-UtTA-p7aV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Regression Metrics"
+      ],
+      "metadata": {
+        "id": "R-WF72xx8T1-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def mean_absolute_error(y_true, y_pred):\n",
+        "  error = 0\n",
+        "  for yt, yp in zip(y_true, y_pred):\n",
+        "    error += np.abss(yt - yp)\n",
+        "    \n",
+        "  return error / len(y_true)"
+      ],
+      "metadata": {
+        "id": "ZXvGKmEd86Ph"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mean_squared_error(y_true, y_pred):\n",
+        "  error = 0\n",
+        "  for yt, yp in zip(y_true, y_pred):\n",
+        "    error += (yt - yp) ** 2\n",
+        "\n",
+        "  return error / len(y_true)"
+      ],
+      "metadata": {
+        "id": "Mxp927xL9bnb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mean_squared_log_error(y_true, y_pred):\n",
+        "  error = 0\n",
+        "  for yt, yp in zip(y_true, y_pred):\n",
+        "    error += (np.log(1 + yt) - np.log(1 + yp)) ** 2\n",
+        "  \n",
+        "  return error / len(y_true)"
+      ],
+      "metadata": {
+        "id": "OHnHKzBh90LY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mean_percentage_error(y_true, y_pred):\n",
+        "  error = 0\n",
+        "  for yt, yp in zip(y_true, y_pred):\n",
+        "    error += (yt - yp) / yt\n",
+        "\n",
+        "  return error / len(y_true)"
+      ],
+      "metadata": {
+        "id": "On-utWb3-gN2"
       },
       "execution_count": null,
       "outputs": []
