--- a/evaluation_metrics.ipynb
+++ b/evaluation_metrics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnIxoC+jJ61G7fZLXfvBwI",
+      "authorship_tag": "ABX9TyOfBdyjwMBhA3/lfa90UL1Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "EjPLJQeufLEb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -674,7 +674,7 @@
       "metadata": {
         "id": "swEywKxrlhjk"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -703,7 +703,7 @@
       "metadata": {
         "id": "YtRSoCd1mrHt"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,6 +793,96 @@
       ],
       "metadata": {
         "id": "On-utWb3-gN2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mean_abs_percentage_error(y_true, y_pred):\n",
+        "  error = 0\n",
+        "  for yt, yp in zip(y_true, y_pred):\n",
+        "    error += np.abs((yt - yp) / yt)\n",
+        "  \n",
+        "  return error / len(y_true)"
+      ],
+      "metadata": {
+        "id": "pFm3VC4q8t96"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def r2(y_true, y_pred):\n",
+        "  mean_true_value = np.mean(y_true)\n",
+        "  numerator = 0\n",
+        "  denominator = 0\n",
+        "\n",
+        "  for yt, yp in zip(y_true, y_pred):\n",
+        "    numerator += (yt - yp) ** 2\n",
+        "    denominator += (yt - mean_true_value) ** 2\n",
+        "  \n",
+        "  ratio = numerator / denominator\n",
+        "  return 1 - ratio"
+      ],
+      "metadata": {
+        "id": "ydEJ3Nao9tET"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# quadratic weighted kappa, Cohen's kappa\n",
+        "# measures the \"agreement\" between two \"ratings\"\n",
+        "# which can be defined as how close these ratings are to each other\n",
+        "# suitable for a classification problem with N different classes\n",
+        "\n",
+        "# over 0.85 is very good\n",
+        "\n",
+        "from sklearn import metrics\n",
+        "y_true = [1, 2, 3, 1, 2, 3, 1, 2, 3]\n",
+        "y_pred = [2, 1, 3, 1, 2, 3, 3, 1, 2]\n",
+        "\n",
+        "metrics.cohen_kappa_score(y_true, y_pred, weights=\"quadratic\")"
+      ],
+      "metadata": {
+        "id": "sfueybOO_Ka5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Matthew's Correlation Coefficient(MCC)\n",
+        "# ranges -1 to 1, 0 is random prediction\n",
+        "# can be used for problems where classes are skewed\n",
+        "\n",
+        "def mcc(y_true, y_pred):\n",
+        "  tp = true_positive(y_true, y_pred)\n",
+        "  tn = true_negative(y_true, y_pred)\n",
+        "  fp = false_positive(y_true, y_pred)\n",
+        "  fn = false_negative(y_true, y_pred)\n",
+        "\n",
+        "  numerator = (tp * tn) - (fp * fn)\n",
+        "  denominator = (\n",
+        "      (tp + fp) *\n",
+        "      (fn + tn) *\n",
+        "      (fp + tn) *\n",
+        "      (tp + fn)\n",
+        "  )\n",
+        "  denominator = denominator ** 0.5\n",
+        "  return numerator / denominator"
+      ],
+      "metadata": {
+        "id": "zIqF1AePAIlz"
       },
       "execution_count": null,
       "outputs": []
